Further darken black. Fix event description spacing to match master.

--- a/app/styles/event.scss
+++ b/app/styles/event.scss
@@ -17,7 +17,7 @@
   font-size: 16px;
 
   &__item {
-    margin-top: 10px;
+    margin-top: 15px;
   }
 }
 
