--- a/app/styles/month-calendar.scss
+++ b/app/styles/month-calendar.scss
@@ -1,7 +1,7 @@
 .month-calendar {
   display: inline-block;
   margin: 0 30px;
-  border: 1px solid lighten($off-black, 50%);
+  border: 1px solid lighten($off-black, 40%);
   border-radius: 4px;
   text-align: center;
   padding: 5px 0;
